@@ -3,6 +3,7 @@ HelpMePlay | 1.0.5
 		S Tier Anima Powers in Torghast are now automatically chosen based on the higher ranked power. (Players will need to opt in for this feature.)
 		Repairing at a merchant is now automatically handled.
 		Added support for adding achievement criteria info to the tooltips of creatures, items, and objects. (The database supporting this feature will expand over time.)
+		Added support for auto selecting the outpost in Talador and Spires of Arak.
 	Quests:
 		Added a glow to the corresponding button during the "Dead Drop" quest in Bastion.
 		Added a glow to the corresponding button during the "Just Winging It" world quest in Maldraxxus.
@@ -25,6 +26,7 @@ HelpMePlay | 1.0.5
 		Added support for more Stable Masters (and healing battle pets.)
 	Options:
 		When opening the options, the player's chosen expansion for Chromie Time will show in the edit box.
+		The "Garrison Tables" option now controls the automation of outpost selection in Gorgrond, Talador, and Spires of Arak.
 	Notes:
 		Added a note for exposing the Exposed Boggarts during the "Tough Crowd" world quest in Ardenweald.
 	Fixes:
